2009-08-17       Gaius Mulley <gaius@gnu.org>

        * gm2/gm2spec.c:  fixed an off by one bug when scanning
	  arguments.  This manifested itself as a linking bug
	  (as reported by John O Goyo <jgoyo@ca.inter.net>)
	  when arguments were presented in a different order.
	  '-o' skipped one to many arguments.

2009-08-16       Gaius Mulley <gaius@gnu.org>

	* gm2/m2.flex:  corrected dates.  Added changes for
	  ISO lexical completeness '(!' pseudonym for '[',
	  '!)' pseudonym for ']', '@' pseudonym for '^', '(:'
	  pseudonym for '{', ':)' pseudonym for '}', '!' pseudonym
	  for '|'.  The source code directives <* *> have been
	  implemented some time ago.

2009-08-15       Gaius Mulley <gaius@gnu.org>

        * gm2/gm2-compiler/M2CaseList.mod:  tidied up formatting of
	  error message.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  IncludeGetParent (New
	  function).  Use IncludeGetParent with appropriate symbols.
	* gm2/gm2-compiler/M2Quads.mod:  use GetParent and GetRecord
	  together now that the specification for GetParent has changed.
	* gm2/gm2-compiler/P2SymBuild.mod:  GetParent now returns the
	  parent of the field or varient.  GetRecord returns the
	  record of varient.  PutFieldRecord returns the field created
	  so that it can be recorded as the tag via PutVarientTag if
	  neccesary.  Modified BuildFieldRecord,
	  BuildVarientSelector, StartBuildVarientFieldRecord and
	  EndBuildVarientFieldRecord.
	* gm2/gm2-compiler/SymbolTable.def:  export GetRecord.
	* gm2/gm2-compiler/SymbolTable.mod:   GetParent now returns
	  the parent of the field or varient.  GetRecord returns the
	  record of varient.  PutFieldRecord returns the field created
	  so that it can be recorded as the tag via PutVarientTag if
	  neccesary.  EnsureOrder (New function) used by
	  PutVarientTag.
	* gm2/ulm-lib-gm2/std/RTErrors.def:  include two ELSE clauses.
	* gm2/ulm-lib-gm2/std/TimeIO.mod:  include ELSE clause.

2009-08-04       Gaius Mulley <gaius@gnu.org>
